# selfdock

./: .gitignore  Makefile  README.md  install.mk  instancefile.c  instancefile.h  meson.build  selfdock.c  todo.txt  usualsuspects.h
moduletest/: exitstatus.sh  functionality.sh  unprivileged_mkdir.sh  writability.sh
research/: isreadonly.c  repro_glibc_fork_assert.c
subprojects/: narg.wrap
